cmake_minimum_required(VERSION 3.7)

# This is a CMake example for Python

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_PROPERTY(SOURCE example.i PROPERTY SWIG_FLAGS "-c++"  "-python" "-builtin")
SWIG_ADD_LIBRARY(example LANGUAGE python SOURCES example.i example.cxx)
SWIG_LINK_LIBRARIES(example ${PYTHON_LIBRARIES})